# adventure

./: Cargo.toml  README.md  Trunk.toml  build.txt  index.html
assets/layouts/: lobby.ron
src/: main.rs
src/almighty/: definition.rs  logic.rs  mod.rs
src/objects/: definition.rs  mod.rs
src/objects/README/: README.md
src/objects/cash_register/: definition.rs  logic.rs  mod.rs
src/objects/ferris/: definition.rs  logic.rs  mod.rs
src/objects/hero/: control.rs  definition.rs  logic.rs  mod.rs
src/objects/paper/: definition.rs  logic.rs  mod.rs
src/ui/: input.rs
