[package]
name = "adventure"
version = "0.1.0"
edition = "2024"

[dependencies]
 avian3d = "0.6.1"
bevy = { version = "0.18", features = ["jpeg"] }
bevy_embedded_assets = "0.15.0"
bevy_mod_raycast = "0.18.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = { version = "0.10.1"}
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }
trig-const = "0.4.0"

getrandom_v04 = { package = "getrandom", version = "0.4.3", features = ["wasm_js"] }

getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_remote = "0.18.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
